--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     },
     "require": {
         "facebook/webdriver": "^1.5",
-        "tracy/tracy": "^2.4"
+        "tracy/tracy": "^2.4",
+        "nette/utils": "^2.5"
     },
     "require-dev": {
         "Nette/Tester": "^2.0"
