--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "test": "\"./vendor/bin/tester\" -C tests"
+        "test": "\"./vendor/bin/tester\" -C --setup tests/setup.php "
     },
     "autoload": {
         "psr-4": {
